--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^5.0.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.0.20",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
